--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   </head>
   <body>
     <header>
-
       <nav>
         <h1>Hello world</h1>
-        <h2> hello<h2>
+        <h2>hello</h2>
       </nav>
     </header>
   </body>
