--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <h1>Hello world</h1>
+        <h1 class="bg-red-400 text-5xl">Hello world</h1>
         <h2>hello</h2>
       </nav>
     </header>
