--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>update doc</title>
+    <link rel="stylesheet" href="dist/main.css" />
   </head>
   <body>
     <header>
       <nav>
-        <h1 class="bg-red-400 text-5xl">Hello world</h1>
-        <h2>hello</h2>
+        <a href="https://supabase.com/"
+          ><img src="icons/supabase-icon.svg" alt="svg icon supabase" />
+        </a>
       </nav>
     </header>
   </body>
