update with the new code

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav >
         <a href="https://supabase.com/"
           ><img src="icons/supabase-icon.svg" alt="svg icon supabase" />
         </a>
+        <div class="flex justify-center " >
+          <h1 class="text-5xl bg-red-500">hello</h1>
+        </div>
       </nav>
     </header>
+    
   </body>
 </html>
