added classes in nav and text and img

--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
   </head>
   <body>
     <header>
-      <nav >
-        <a href="https://supabase.com/"
-          ><img src="icons/supabase-icon.svg" alt="svg icon supabase" />
-        </a>
-        <div class="flex justify-center " >
-          <h1 class="text-5xl bg-red-500">hello</h1>
+      <nav class="mt-2">
+         <div class="flex justify-center">
+          <h1 class="text-5xl text-green-800 m-1 p-2 font-bold capitalize">supabase</h1>
         </div>
+        <a class="flex justify-center" href="https://supabase.com/"
+          ><img class="w-fit" src="icons/supabase-icon.svg" alt="svg icon supabase"/>
+        </a>
       </nav>
     </header>
-    
   </body>
 </html>
