--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
   </head>
   <body>
     <header>
-      <nav class="mt-2">
-         <div class="flex justify-center">
-          <h1 class="text-5xl text-green-800 m-1 p-2 font-bold capitalize">supabase</h1>
+      <nav class="mt-2 flex justify-center">
+         <div>
+          <h1 class="text-3xl text-green-800 m-1 p-2 font-bold capitalize md:text-4xl lg:text-5xl  ">supabase</h1>
         </div>
-        <a class="flex justify-center" href="https://supabase.com/"
-          ><img class="w-fit" src="icons/supabase-icon.svg" alt="svg icon supabase"/>
+        <a class=" flex justify-center items-center" href="https://supabase.com/"
+          ><img class="w-10 h-10 flex justify-center items-center" src="icons/supabase-icon.svg" alt="svg icon supabase"/>
         </a>
       </nav>
     </header>
+    <main>
+      <div>
+        <div>Documention</div>
+        <div>videos</div>
+      </div>
+
+    </main>
   </body>
 </html>
