update html and css

--- a/index.html
+++ b/index.html
@@ -10,20 +10,44 @@
   <body>
     <header>
       <nav class="mt-2 flex justify-center">
-         <div>
-          <h1 class="text-3xl text-green-800 m-1 p-2 font-bold capitalize md:text-4xl lg:text-5xl  ">supabase</h1>
+        <div>
+          <h1
+            class="text-3xl text-green-800 m-1 p-2 font-bold capitalize md:text-4xl lg:text-5xl"
+          >
+            supabase
+          </h1>
         </div>
-        <a class=" flex justify-center items-center" href="https://supabase.com/"
-          ><img class="w-10 h-10 flex justify-center items-center" src="icons/supabase-icon.svg" alt="svg icon supabase"/>
+        <a class="flex justify-center items-center" href="https://supabase.com/"
+          ><img
+            class="w-10 h-10 flex justify-center items-center"
+            src="icons/supabase-icon.svg"
+            alt="svg icon supabase"
+          />
         </a>
       </nav>
     </header>
     <main>
-      <div>
-        <div>Documention</div>
-        <div>videos</div>
+      <div
+        class="flex justify-center m-5 pt-6 pb-6 bg-green-100 rounded-2xl shadow-xl"
+      >
+        <p class="capitalize text-2xl font-semibold">
+          case study on supabase written by Sjur hassel, sayeda chattopadhyay
+          and rohit kumar.
+        </p>
       </div>
 
+      <div class="flex justify-center flex-wrap-reverse m-5 pt-6 pb-6">
+        <div
+          class="text-3xl font-bold m-5 p-6 bg-green-100 md:text-3xl lg:text-5xl"
+        >
+          <span>Documention</span>
+        </div>
+        <div
+          class="text-3xl font-bold m-5 p-6 bg-green-100 md:text-3xl lg:text-5xl"
+        >
+          <span class="capitalize">Video</span>
+        </div>
+      </div>
     </main>
   </body>
 </html>
