--- a/index.html
+++ b/index.html
@@ -28,11 +28,31 @@
     </header>
     <main>
       <div
-        class="flex justify-center m-5 pt-6 pb-6 bg-green-100 rounded-2xl shadow-xl"
+        class="flex justify-center m-5 p-7 bg-green-100 rounded-2xl shadow-xl"
       >
-        <p class="capitalize text-2xl font-semibold">
+        <p class="capitalize font-semibold md:text-lg lg:text-lg">
           case study on supabase written by Sjur hassel, sayeda chattopadhyay
           and rohit kumar.
+        </p>
+      </div>
+
+      <div class="">
+        <span class="flex justify-center text-center font-bold p-5 text-3xl"
+          >Introduction</span
+        >
+        <p class="p-5">
+          Supabase is an open-source Backend-as-a-Service (BaaS) platform.
+          Supabase uses Postgres and provides developers a range odf services
+          e.g. cloud-hosted database, authentication, real-time subscriptions,
+          and API generation services. Some of the advantages of Supabase are
+          easy-to-use APIs, SDKs, and client libraries for common programming
+          languages such as JavaScript, Python, and Ruby. Morover, it is
+          designed to be scalable, customizable and secure. Since Supabase is
+          licensed under the Apache License 2.0, it is free to use and modify.
+          These makes it an ideal choice for businesses and enterprises of all
+          sizes and it has gained popularity among developers, making it a good
+          alternative to other BaaS platforms e.g Firebase, Parse, Appwrite,
+          Nhost and AWS Amplify.
         </p>
       </div>
 
