update with imges and edit code html and classes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
       <div
-        class="flex justify-center m-5 p-7 bg-green-100 rounded-2xl shadow-xl"
+        class="flex justify-center m-5 p-7 bg-green-100 rounded-2xl shadow-xl lg:mx-auto lg:w-1/2"
       >
         <p class="capitalize font-semibold md:text-lg lg:text-lg">
           case study on supabase written by Sjur hassel, sayeda chattopadhyay
@@ -37,14 +37,18 @@
       </div>
 
       <div class="">
-        <span class="flex justify-center text-center font-bold p-5 text-3xl"
+        <span
+          class="flex justify-center text-center font-bold p-5 text-3xl text-green-800"
           >Introduction</span
         >
-        <p class="p-5">
-          Supabase is an open-source Backend-as-a-Service (BaaS) platform.
-          Supabase uses Postgres and provides developers a range odf services
-          e.g. cloud-hosted database, authentication, real-time subscriptions,
-          and API generation services. Some of the advantages of Supabase are
+        <p class="p-5 lg:w-1/2 lg:mx-auto">
+          Supabase is an open source Firebase alternative. Start your project
+          with a Postgres database, Authentication, instant APIs, Edge
+          Functions, Realtime subscriptions, and Storage. Supabase is an
+          open-source Backend-as-a-Service (BaaS) platform. Supabase uses
+          Postgres and provides developers a range odf services e.g.
+          cloud-hosted database, authentication, real-time subscriptions, and
+          API generation services. Some of the advantages of Supabase are
           easy-to-use APIs, SDKs, and client libraries for common programming
           languages such as JavaScript, Python, and Ruby. Morover, it is
           designed to be scalable, customizable and secure. Since Supabase is
@@ -53,6 +57,67 @@
           sizes and it has gained popularity among developers, making it a good
           alternative to other BaaS platforms e.g Firebase, Parse, Appwrite,
           Nhost and AWS Amplify.
+        </p>
+        <img
+          src="image/2.png"
+          alt="image of sapabase interface"
+          class="w-full mx-auto p-2 lg:w-1/2 lg:mx-auto"
+        />
+        <span
+          class="flex justify-center text-center font-bold p-5 text-3xl text-green-800"
+          >Sing in and make Account</span
+        >
+        <img
+          src="image/1.png"
+          alt="image of sapabase interface"
+          class="w-full mx-auto p-2 lg:w-1/2 lg:mx-auto"
+        />
+        <p class="p-5 lg:w-1/2 lg:mx-auto">
+          Supabase is an open source Firebase alternative. Start your project
+          with a Postgres database, Authentication, instant APIs, Edge
+          Functions, Realtime subscriptions, and Storage. Supabase is an .
+        </p>
+        <span
+          class="flex justify-center text-center font-bold p-5 text-3xl text-green-800"
+          >Set up your project</span
+        >
+        <img
+          src="image/4.png"
+          alt="image of sapabase interface"
+          class="w-full mx-auto p-2 lg:w-1/2 lg:mx-auto"
+        />
+        <p class="p-5 lg:w-1/2 lg:mx-auto">
+          Supabase is an open source Firebase alternative. Start your project
+          with a Postgres database, Authentication, instant APIs, Edge
+          Functions, Realtime subscriptions, and Storage. Supabase is an .
+        </p>
+        <span
+          class="flex justify-center text-center font-bold p-5 text-3xl text-green-800"
+          >Make column and insert row
+        </span>
+        <img
+          src="image/3.png"
+          alt="image of sapabase interface"
+          class="w-full mx-auto p-2 lg:w-1/2 lg:mx-auto"
+        />
+        <p class="p-5 lg:w-1/2 lg:mx-auto">
+          Supabase is an open source Firebase alternative. Start your project
+          with a Postgres database, Authentication, instant APIs, Edge
+          Functions, Realtime subscriptions, and Storage. Supabase is an .
+        </p>
+        <span
+          class="flex justify-center text-center font-bold p-5 text-3xl text-green-800"
+          >Api Url and key CURD operation
+        </span>
+        <img
+          src="image/5.png"
+          alt="image of sapabase interface"
+          class="w-full mx-auto p-2 lg:w-1/2 lg:mx-auto"
+        />
+        <p class="p-5 lg:w-1/2 lg:mx-auto">
+          Supabase is an open source Firebase alternative. Start your project
+          with a Postgres database, Authentication, instant APIs, Edge
+          Functions, Realtime subscriptions, and Storage. Supabase is an .
         </p>
       </div>
 
