--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         />
         <span
           class="flex justify-center text-center font-bold p-5 text-3xl text-green-800"
-          >Sing in and make Account</span
+          >Signin or make Account</span
         >
         <img
           src="image/1.png"
