--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           and rohit kumar.
         </p>
       </div>
-
+      /**/
       <div class="">
         <span
           class="flex justify-center text-center font-bold p-5 text-3xl text-green-800"
@@ -58,79 +58,50 @@
           alternative to other BaaS platforms e.g Firebase, Parse, Appwrite,
           Nhost and AWS Amplify.
         </p>
-        <img
-          src="image/2.png"
-          alt="image of sapabase interface"
-          class="w-full mx-auto p-2 lg:w-1/2 lg:mx-auto"
-        />
-        <span
-          class="flex justify-center text-center font-bold p-5 text-3xl text-green-800"
-          >Signin or make Account</span
-        >
-        <img
-          src="image/1.png"
-          alt="image of sapabase interface"
-          class="w-full mx-auto p-2 lg:w-1/2 lg:mx-auto"
-        />
-        <p class="p-5 lg:w-1/2 lg:mx-auto">
-          Supabase is an open source Firebase alternative. Start your project
-          with a Postgres database, Authentication, instant APIs, Edge
-          Functions, Realtime subscriptions, and Storage. Supabase is an .
-        </p>
-        <span
-          class="flex justify-center text-center font-bold p-5 text-3xl text-green-800"
-          >Set up your project</span
-        >
-        <img
-          src="image/4.png"
-          alt="image of sapabase interface"
-          class="w-full mx-auto p-2 lg:w-1/2 lg:mx-auto"
-        />
-        <p class="p-5 lg:w-1/2 lg:mx-auto">
-          Supabase is an open source Firebase alternative. Start your project
-          with a Postgres database, Authentication, instant APIs, Edge
-          Functions, Realtime subscriptions, and Storage. Supabase is an .
-        </p>
-        <span
-          class="flex justify-center text-center font-bold p-5 text-3xl text-green-800"
-          >Make column and insert row
-        </span>
-        <img
-          src="image/3.png"
-          alt="image of sapabase interface"
-          class="w-full mx-auto p-2 lg:w-1/2 lg:mx-auto"
-        />
-        <p class="p-5 lg:w-1/2 lg:mx-auto">
-          Supabase is an open source Firebase alternative. Start your project
-          with a Postgres database, Authentication, instant APIs, Edge
-          Functions, Realtime subscriptions, and Storage. Supabase is an .
-        </p>
-        <span
-          class="flex justify-center text-center font-bold p-5 text-3xl text-green-800"
-          >Api Url and key CURD operation
-        </span>
-        <img
-          src="image/5.png"
-          alt="image of sapabase interface"
-          class="w-full mx-auto p-2 lg:w-1/2 lg:mx-auto"
-        />
-        <p class="p-5 lg:w-1/2 lg:mx-auto">
-          Supabase is an open source Firebase alternative. Start your project
-          with a Postgres database, Authentication, instant APIs, Edge
-          Functions, Realtime subscriptions, and Storage. Supabase is an .
-        </p>
       </div>
 
-      <div class="flex justify-center flex-wrap-reverse m-5 pt-6 pb-6">
+      <div
+        class="grid grid-cols-2 text-center m-5 pt-6 pb-6 lg:w-1/2 lg:mx-auto"
+      >
         <div
-          class="text-3xl font-bold m-5 p-6 bg-green-100 md:text-3xl lg:text-5xl"
+          class="text-3xl font-bold m-5 p-6 bg-green-300 rounded-xl hover:bg-green-100 shadow-lg cursor-pointer md:text-3xl lg:text-3xl"
         >
-          <span>Documention</span>
+          <span class="capitalize flex justify-center items-center gap-3">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244"
+              /></svg
+            >case study</span
+          >
         </div>
         <div
-          class="text-3xl font-bold m-5 p-6 bg-green-100 md:text-3xl lg:text-5xl"
+          class="text-3xl font-bold m-5 p-6 bg-green-300 rounded-xl hover:bg-green-100 shadow-lg cursor-pointer md:text-3xl lg:text-3xl"
         >
-          <span class="capitalize">Video</span>
+          <span class="capitalize flex justify-center items-center gap-3">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244"
+              /></svg
+            >Video</span
+          >
         </div>
       </div>
     </main>
