--- a/index.html
+++ b/index.html
@@ -61,47 +61,17 @@
       </div>
 
       <div
-        class="grid grid-cols-2 text-center m-5 pt-6 pb-6 lg:w-1/2 lg:mx-auto"
+        class="flex flex-wrap justify-center flex-col text-center m-5 pt-6 pb-6 lg:w-1/2 lg:grid-cols-2 lg:grid lg:mx-auto"
       >
         <div
-          class="text-3xl font-bold m-5 p-6 bg-green-300 rounded-xl hover:bg-green-100 shadow-lg cursor-pointer md:text-3xl lg:text-3xl"
+          class="bg-green-400 text-lg w-56 mx-auto p-6 m-6 rounded-lg shadow-xl hover:bg-green-300 cursor-pointer font-semibold"
         >
-          <span class="capitalize flex justify-center items-center gap-3">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244"
-              /></svg
-            >case study</span
-          >
+          <a href="">case study</a>
         </div>
         <div
-          class="text-3xl font-bold m-5 p-6 bg-green-300 rounded-xl hover:bg-green-100 shadow-lg cursor-pointer md:text-3xl lg:text-3xl"
+          class="bg-green-400 text-lg w-56 mx-auto p-6 m-6 rounded-lg shadow-xl hover:bg-green-300 cursor-pointer font-semibold"
         >
-          <span class="capitalize flex justify-center items-center gap-3">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244"
-              /></svg
-            >Video</span
-          >
+          <a href="">video</a>
         </div>
       </div>
     </main>
