--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div
           class="bg-green-400 text-lg w-56 mx-auto p-6 m-6 rounded-lg shadow-xl hover:bg-green-300 cursor-pointer font-semibold"
         >
-          <a href="">video</a>
+          <a href="https://www.youtube.com/watch?v=hxhfxN6yGcg">video</a>
         </div>
       </div>
     </main>
