update case study link

--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
         <div
           class="bg-green-400 text-lg w-56 mx-auto p-6 m-6 rounded-lg shadow-xl hover:bg-green-300 cursor-pointer font-semibold"
         >
-          <a href="">case study</a>
+          <a
+            href="https://github.com/NoroffFEU/development-platforms-3/blob/supabase-main-sayeda/case-studies/supabase-case-study.md"
+            >case study</a
+          >
         </div>
         <div
           class="bg-green-400 text-lg w-56 mx-auto p-6 m-6 rounded-lg shadow-xl hover:bg-green-300 cursor-pointer font-semibold"
